--- a/src/BannerFolder/BannerStyle.css
+++ b/src/BannerFolder/BannerStyle.css
@@ -21,11 +21,84 @@
   background-color: royalblue;
 }
 
+section {
+  background-color: black;
+}
 section .banner {
+  margin-top: 4rem;
+  position: relative;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
+  height: 100vh;
+  background: url(/src/images/PortfolioBg.jpg) fixed top;
+  background-repeat: no-repeat;
+  overflow: scroll;
+  background-size: 150%;
+  background-color: black;
+}
+@media only screen and (min-width: 850px) {
+  section .banner {
+    height: 100vh;
+    background: url(/src/images/PortfolioBg.jpg) fixed top;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+section .banner .ban {
+  display: flex;
+  justify-content: space-around;
   align-items: center;
   flex-direction: row;
-  border: 2px solid red;
-  height: 100vh;
+  width: 80%;
+  max-width: 900px;
+  height: 10%;
+  margin: 0 auto;
+  position: fixed;
+  margin-top: 15%;
+}
+section .banner .ban .eye1 {
+  position: relative;
+  width: 110px;
+  height: 110px;
+  background-color: rgb(170, 170, 170);
+  display: block;
+  margin: 0 auto;
+  box-shadow: insert 0px 0px 30px 30px rgba(0, 0, 0, 0.9);
+  border-radius: 50%;
+}
+section .banner .ban .eye1::before {
+  content: "";
+  position: absolute;
+  background-color: black;
+  top: 50%;
+  left: 35px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid blue;
+  box-sizing: border-box;
+}
+section .banner .ban .eye2 {
+  position: relative;
+  width: 110px;
+  height: 110px;
+  background-color: rgb(170, 170, 170);
+  display: block;
+  margin: 0 auto;
+  box-shadow: 0 5px 45px gray, inset 0 0 15px gray, insert 0 0 25px gray;
+  border-radius: 50%;
+}
+section .banner .ban .eye2::before {
+  content: "";
+  position: absolute;
+  background-color: black;
+  top: 50%;
+  left: 35px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid blue;
+  box-sizing: border-box;
 }/*# sourceMappingURL=BannerStyle.css.map */
