--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@
     background-size: cover;
   }
 } */
+
+/* @media only screen and (min-width: 1750px) {
+  .eye1, .eye2 {
+  display: none;
+  }
+}  */
