--- a/src/BannerFolder/BannerStyle.css
+++ b/src/BannerFolder/BannerStyle.css
@@ -25,6 +25,7 @@ section {
   background-color: black;
 }
 section .banner {
+  color: aliceblue;
   margin-top: 4rem;
   position: relative;
   display: flex;
@@ -36,14 +37,6 @@ section .banner {
   background-size: 150%;
   background-color: black;
 }
-@media only screen and (min-width: 850px) {
-  section .banner {
-    height: 100vh;
-    background: url(/src/images/PortfolioBg.jpg) fixed top;
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
-}
 section .banner .ban {
   display: flex;
   justify-content: space-around;
@@ -51,7 +44,9 @@ section .banner .ban {
   flex-direction: row;
   width: 80%;
   max-width: 900px;
-  height: 10%;
+  box-shadow: 0px 0px 300px 180px rgba(0, 0, 0, 0.806);
+  background-color: rgba(0, 0, 0, 0.806);
+  height: 150px;
   margin: 0 auto;
   position: fixed;
   margin-top: 15%;
@@ -60,10 +55,9 @@ section .banner .ban .eye1 {
   position: relative;
   width: 110px;
   height: 110px;
-  background-color: rgb(170, 170, 170);
+  background-color: rgb(130, 130, 130);
   display: block;
   margin: 0 auto;
-  box-shadow: insert 0px 0px 30px 30px rgba(0, 0, 0, 0.9);
   border-radius: 50%;
 }
 section .banner .ban .eye1::before {
@@ -76,7 +70,7 @@ section .banner .ban .eye1::before {
   height: 35px;
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  border: 5px solid blue;
+  border: 5px solid royalblue;
   box-sizing: border-box;
 }
 section .banner .ban .eye2 {
@@ -86,7 +80,6 @@ section .banner .ban .eye2 {
   background-color: rgb(170, 170, 170);
   display: block;
   margin: 0 auto;
-  box-shadow: 0 5px 45px gray, inset 0 0 15px gray, insert 0 0 25px gray;
   border-radius: 50%;
 }
 section .banner .ban .eye2::before {
@@ -99,6 +92,58 @@ section .banner .ban .eye2::before {
   height: 35px;
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  border: 5px solid blue;
+  border: 5px solid royalblue;
   box-sizing: border-box;
+}
+@media only screen and (min-width: 850px) {
+  section .banner {
+    height: 100vh;
+    background: url(/src/images/PortfolioBg.jpg) fixed top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    opacity: 0.5;
+  }
+  section .banner .ban {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    width: 50%;
+    max-width: 800px;
+    box-shadow: 0px 0px 300px 180px rgba(0, 0, 0, 0.806);
+    background-color: rgba(0, 0, 0, 0.806);
+    height: 170px;
+    margin-top: 10%;
+  }
+  section .banner .ban .eye1 {
+    width: 170px;
+    height: 170px;
+  }
+  section .banner .ban .eye1::before {
+    content: "";
+    left: 45px;
+    width: 50px;
+    height: 50px;
+  }
+  section .banner .ban .eye2 {
+    position: relative;
+    width: 170px;
+    height: 170px;
+  }
+  section .banner .ban .eye2::before {
+    content: "";
+    top: 50%;
+    left: 45px;
+    width: 50px;
+    height: 50px;
+  }
+}
+@media only screen and (min-width: 1750px) {
+  section .ban {
+    opacity: 0;
+  }
+}
+section p {
+  z-index: 56;
+  background-color: rgba(255, 255, 255, 0.163);
 }/*# sourceMappingURL=BannerStyle.css.map */
