--- a/src/BannerFolder/BannerStyle.scss
+++ b/src/BannerFolder/BannerStyle.scss
@@ -59,7 +59,7 @@ $special-Color: #4c5eff;
   }
 
   @if $breakpoint==desktop {
-    @media only screen and (min-width: 1280px) {
+    @media only screen and (min-width: 1750px) {
       @content;
     }
   }
@@ -67,14 +67,12 @@ $special-Color: #4c5eff;
 
 section {
   background-color: black;
-  // border: 2px solid red;
-  // margin-top: 2rem;
   .banner {
+    color: aliceblue;
     margin-top: 4rem;
     position: relative;
     display: flex;
     justify-content: space-around;
-    // @include flexDisplay(flex-start, center, row);
     height: 100vh;
     background: url(/src/images/PortfolioBg.jpg) fixed top;
     background-repeat: no-repeat;
@@ -82,20 +80,13 @@ section {
     background-size: 150%;
     background-color: black;
 
-    @include responsive(tablet) {
-      height: 100vh;
-      background: url(/src/images/PortfolioBg.jpg) fixed top;
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-
     .ban {
       @include flexDisplay(space-around, center, row);
-      // border: 2px solid red;
       width: 80%;
       max-width: 900px;
-      // min-width: 500px;
-      height: 10%;
+      box-shadow: 0px 0px 300px 180px rgba(0, 0, 0, 0.806);
+      background-color: rgba(0, 0, 0, 0.806);
+      height: 150px;
       margin: 0 auto;
       position: fixed;
       margin-top: 15%;
@@ -104,17 +95,10 @@ section {
         position: relative;
         width: 110px;
         height: 110px;
-        background-color: rgb(170, 170, 170);
+        background-color: rgb(130, 130, 130);
         display: block;
         margin: 0 auto;
-        box-shadow: insert 0px 0px 30px 30px rgba(0, 0, 0, 0.9);
-        // top: 400px;
-        // left: 30px;
-        // right:70vw ;
-        // position: fixed;
-        // margin: 0 70vw 0 30vw;
 
-        // position: absolute;
         border-radius: 50%;
       }
       .eye1::before {
@@ -127,7 +111,7 @@ section {
         height: 35px;
         border-radius: 50%;
         transform: translate(-50%, -50%);
-        border: 5px solid blue;
+        border: 5px solid royalblue;
         box-sizing: border-box;
       }
       .eye2 {
@@ -137,9 +121,6 @@ section {
         background-color: rgb(170, 170, 170);
         display: block;
         margin: 0 auto;
-        box-shadow: 0 5px 45px gray, inset 0 0 15px gray, insert 0 0 25px gray;
-        // margin-top: 33%;
-        // position: absolute;
         border-radius: 50%;
       }
       .eye2::before {
@@ -152,9 +133,59 @@ section {
         height: 35px;
         border-radius: 50%;
         transform: translate(-50%, -50%);
-        border: 5px solid blue;
+        border: 5px solid royalblue;
         box-sizing: border-box;
       }
     }
+
+    @include responsive(tablet) {
+      height: 100vh;
+      background: url(/src/images/PortfolioBg.jpg) fixed top;
+      background-repeat: no-repeat;
+      background-size: contain;
+      opacity: 0.5;
+
+      .ban {
+        @include flexDisplay(space-around, center, row);
+        width: 50%;
+        max-width: 800px;
+        box-shadow: 0px 0px 300px 180px rgba(0, 0, 0, 0.806);
+        background-color: rgba(0, 0, 0, 0.806);
+        height: 170px;
+        margin-top: 10%;
+
+        .eye1 {
+          width: 170px;
+          height: 170px;
+        }
+        .eye1::before {
+          content: "";
+          left: 45px;
+          width: 50px;
+          height: 50px;
+        }
+        .eye2 {
+          position: relative;
+          width: 170px;
+          height: 170px;
+        }
+        .eye2::before {
+          content: "";
+          top: 50%;
+          left: 45px;
+          width: 50px;
+          height: 50px;
+        }
+      }
+    }
+  }
+  @include responsive(desktop) {
+    .ban {
+      opacity: 0;
+    }
+  }
+  p{
+    z-index: 56;
+    background-color: rgba(255, 255, 255, 0.163);
   }
 }
