--- a/src/BannerFolder/BannerStyle.scss
+++ b/src/BannerFolder/BannerStyle.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:wght@300&family=Source+Code+Pro:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:wght@300&family=Source+Code+Pro:wght@300&display=swap");
 
 // global variables
 * {
@@ -7,7 +8,8 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  font-family: poppins;
+  font-family: "Orbitron", sans-serif;
+  // font-family: poppins;
 }
 
 *::-webkit-scrollbar {
@@ -98,7 +100,14 @@ section {
         background-color: rgb(130, 130, 130);
         display: block;
         margin: 0 auto;
-
+        transition: all 0.1s ease-out;
+        opacity: 0.4;
+        box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+          rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+          rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+          rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+          rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+          rgba(0, 0, 0, 0.09) 0px 32px 16px;
         border-radius: 50%;
       }
       .eye1::before {
@@ -122,6 +131,14 @@ section {
         display: block;
         margin: 0 auto;
         border-radius: 50%;
+        transition: all 0.1s ease-out;
+        opacity: 0.4;
+        box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+          rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+          rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+          rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+          rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+          rgba(0, 0, 0, 0.09) 0px 32px 16px;
       }
       .eye2::before {
         content: "";
@@ -143,7 +160,7 @@ section {
       background: url(/src/images/PortfolioBg.jpg) fixed top;
       background-repeat: no-repeat;
       background-size: contain;
-      opacity: 0.5;
+      // opacity: 0.6;
 
       .ban {
         @include flexDisplay(space-around, center, row);
@@ -183,9 +200,5 @@ section {
     .ban {
       opacity: 0;
     }
-  }
-  p{
-    z-index: 56;
-    background-color: rgba(255, 255, 255, 0.163);
   }
 }
