--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:wght@300&family=Source+Code+Pro:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  font-family: poppins;
+  font-family: "Orbitron", sans-serif;
 }
 
 *::-webkit-scrollbar {
@@ -41,7 +41,8 @@ section .topbar {
   }
 }
 section .topbar h3 {
-  color: #4c5eff;
+  color: #5c629a;
+  font-family: "Orbitron", sans-serif;
 }
 section .topbar nav {
   position: absolute;
