--- a/src/TopbarFolder/TopbarStyle.scss
+++ b/src/TopbarFolder/TopbarStyle.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:wght@300&family=Source+Code+Pro:wght@300&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
 // global variables
 * {
   margin: 0;
@@ -7,7 +7,8 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  font-family: poppins;
+  font-family: "Orbitron", sans-serif;
+  // font-family: poppins;
 }
 
 *::-webkit-scrollbar {
@@ -85,8 +86,8 @@ section {
     }
     //  icon
     h3 {
-      color: #4c5eff;
-      
+      color: #5c629a;
+      font-family: "Orbitron", sans-serif;
       // position: fixed;
     }
     nav {
