removed build from .gitignore

--- a/src/BannerFolder/BannerStyle.scss
+++ b/src/BannerFolder/BannerStyle.scss
@@ -196,9 +196,9 @@ section {
       }
     }
   }
-  @include responsive(desktop) {
-    .ban {
-      opacity: 0;
-    }
-  }
+  // @include responsive(desktop) {
+  //   .ban {
+  //     opacity: 0;
+  //   }
+  // }
 }
