--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -41,7 +41,7 @@ section .topbar {
   }
 }
 section .topbar h3 {
-  color: #5c629a;
+  color: royalblue;
   font-family: "Orbitron", sans-serif;
 }
 section .topbar nav {
@@ -51,6 +51,8 @@ section .topbar nav {
   left: 0;
   right: 0;
   top: 5rem;
+  background-color: rgba(160, 183, 252, 0.888);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
 }
 @media only screen and (min-width: 850px) {
   section .topbar nav {
@@ -58,6 +60,7 @@ section .topbar nav {
     top: 0;
     width: 60%;
     max-width: 500px;
+    background-color: rgba(255, 255, 255, 0);
   }
 }
 section .topbar nav ul {
@@ -85,30 +88,49 @@ section .topbar nav ul.closeMenu {
   }
 }
 section .topbar nav ul li {
-  color: antiquewhite;
+  color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   padding: 10px;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid royalblue;
   width: 100%;
   cursor: pointer;
   transition: all 0.2s linear;
   font-weight: 600;
 }
 section .topbar nav ul li:hover {
-  background-color: royalblue;
-  transform: scale(1.2);
+  background-color: rgba(160, 183, 252, 0.888);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  transform: scale(1.5);
 }
 @media only screen and (min-width: 850px) {
   section .topbar nav ul li {
     border: none;
     font-weight: 700;
+    transition: all 0.2s linear;
+  }
+  section .topbar nav ul li::after {
+    content: "";
+    width: 0px;
+    height: 40px;
+    position: absolute;
+    transition: all 0.2s linear;
   }
   section .topbar nav ul li:hover {
-    background-color: rgba(65, 105, 225, 0);
+    z-index: 5;
+    width: 70%;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
     transform: scale(1.5);
+  }
+  section .topbar nav ul li:hover::before {
+    content: "";
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    border: 1px solid royalblue;
   }
 }
 section .topbar .social-media {
@@ -136,8 +158,8 @@ section .topbar .social-media li {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid gray;
-  background-color: whitesmoke;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
   border-radius: 5px;
   margin-bottom: auto;
   width: 80%;
