--- a/src/TopbarFolder/TopbarStyle.scss
+++ b/src/TopbarFolder/TopbarStyle.scss
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap");
 // global variables
 * {
   margin: 0;
@@ -86,7 +85,7 @@ section {
     }
     //  icon
     h3 {
-      color: #5c629a;
+      color: royalblue;
       font-family: "Orbitron", sans-serif;
       // position: fixed;
     }
@@ -97,6 +96,8 @@ section {
       left: 0;
       right: 0;
       top: 5rem;
+      background-color: rgba(160, 183, 252, 0.888);
+      box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
 
       // nav for desktop and tablet view
       @include responsive(tablet) {
@@ -104,6 +105,7 @@ section {
         top: 0;
         width: 60%;
         max-width: 500px;
+        background-color: rgba(255, 255, 255, 0);
       }
 
       ul {
@@ -128,25 +130,51 @@ section {
         }
 
         li {
-          color: antiquewhite;
+          color: whitesmoke;
           @include flexDisplay(center, center, row);
           padding: 10px;
-          border-bottom: 1px solid blue;
+          border-bottom: 1px solid royalblue;
           width: 100%;
           cursor: pointer;
           transition: all 0.2s linear;
           font-weight: 600;
           &:hover {
-            background-color: royalblue;
-            transform: scale(1.2);
+            background-color: rgba(160, 183, 252, 0.888);
+            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+            transform: scale(1.5);
           }
           @include responsive(tablet) {
             border: none;
             font-weight: 700;
+            // width: 0;
+            transition: all 0.2s linear;
 
+            &::after {
+              content: "";
+              width: 0px;
+              height: 40px;
+              position: absolute;
+              transition: all 0.2s linear;
+
+              // border: 2px solid white;
+            }
             &:hover {
-              background-color: rgba(65, 105, 225, 0);
+              z-index: 5;
+              width: 70%;
+              background-color: rgba(255, 255, 255, 0.1);
+              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
               transform: scale(1.5);
+              // background-color: #444444;
+
+              &::before {
+                content: "";
+                width: 100%;
+                height: 40px;
+                position: absolute;
+                border: 1px solid royalblue;
+                // border-radius: 5px;
+                // transition: all 0.3s linear;
+              }
             }
           }
         }
@@ -172,8 +200,9 @@ section {
 
       li {
         @include flexDisplay(center, center, column);
-        border: 1px solid gray;
-        background-color: whitesmoke;
+        // border: 1px solid rgba(245, 245, 245, 0.215);
+        background-color: rgba(255, 255, 255, 0.1);
+        box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
         border-radius: 5px;
         margin-bottom: auto;
         width: 80%;
