--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -21,12 +21,14 @@
   background-color: royalblue;
 }
 
-section .topbar {
+.first {
+  position: relative;
+}
+.first .topbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  position: absolute;
   padding: 0 5px;
   height: 4rem;
   z-index: 10;
@@ -36,15 +38,15 @@ section .topbar {
   background-color: rgb(0, 0, 0);
 }
 @media only screen and (min-width: 850px) {
-  section .topbar {
+  .first .topbar {
     padding: 10px 10px;
   }
 }
-section .topbar h3 {
+.first .topbar h3 {
   color: royalblue;
   font-family: "Orbitron", sans-serif;
 }
-section .topbar nav {
+.first .topbar nav {
   position: absolute;
   margin-left: 0;
   margin-right: 0;
@@ -55,7 +57,7 @@ section .topbar nav {
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
 }
 @media only screen and (min-width: 850px) {
-  section .topbar nav {
+  .first .topbar nav {
     position: relative;
     top: 0;
     width: 60%;
@@ -63,7 +65,7 @@ section .topbar nav {
     background-color: rgba(255, 255, 255, 0);
   }
 }
-section .topbar nav ul {
+.first .topbar nav ul {
   overflow: hidden;
   transition: all 0.5s linear;
   display: flex;
@@ -71,14 +73,14 @@ section .topbar nav ul {
   align-items: center;
   flex-direction: column;
 }
-section .topbar nav ul.openMenu {
+.first .topbar nav ul.openMenu {
   height: 200px;
 }
-section .topbar nav ul.closeMenu {
+.first .topbar nav ul.closeMenu {
   height: 0px;
 }
 @media only screen and (min-width: 850px) {
-  section .topbar nav ul {
+  .first .topbar nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -87,7 +89,7 @@ section .topbar nav ul.closeMenu {
     border: none;
   }
 }
-section .topbar nav ul li {
+.first .topbar nav ul li {
   color: whitesmoke;
   display: flex;
   justify-content: center;
@@ -100,40 +102,39 @@ section .topbar nav ul li {
   transition: all 0.2s linear;
   font-weight: 600;
 }
-section .topbar nav ul li:hover {
+.first .topbar nav ul li:hover {
   background-color: rgba(160, 183, 252, 0.888);
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
   transform: scale(1.5);
 }
 @media only screen and (min-width: 850px) {
-  section .topbar nav ul li {
+  .first .topbar nav ul li {
     border: none;
     font-weight: 700;
     transition: all 0.2s linear;
   }
-  section .topbar nav ul li::after {
+  .first .topbar nav ul li::after {
     content: "";
     width: 0px;
     height: 40px;
     position: absolute;
     transition: all 0.2s linear;
   }
-  section .topbar nav ul li:hover {
+  .first .topbar nav ul li:hover {
     z-index: 5;
     width: 70%;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0);
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
     transform: scale(1.5);
   }
-  section .topbar nav ul li:hover::before {
+  .first .topbar nav ul li:hover::before {
     content: "";
     width: 100%;
-    height: 40px;
+    height: 30px;
     position: absolute;
-    border: 1px solid royalblue;
   }
 }
-section .topbar .social-media {
+.first .topbar .social-media {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,14 +147,14 @@ section .topbar .social-media {
   position: fixed;
 }
 @media only screen and (min-width: 850px) {
-  section .topbar .social-media {
+  .first .topbar .social-media {
     border: none;
     position: relative;
     right: 20px;
     top: 15vh;
   }
 }
-section .topbar .social-media li {
+.first .topbar .social-media li {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -166,15 +167,15 @@ section .topbar .social-media li {
   gap: 20px;
   padding: 5px 5px 45px 5px;
 }
-section .topbar .social-media li .social-icon {
+.first .topbar .social-media li .social-icon {
   color: #4c5eff;
   font-size: 20px;
   transition: all 0.2s linear;
 }
-section .topbar .social-media li .social-icon:hover {
+.first .topbar .social-media li .social-icon:hover {
   transform: scale(1.5);
 }
-section .topbar .social-media .social-media-follow-me {
+.first .topbar .social-media .social-media-follow-me {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -184,23 +185,23 @@ section .topbar .social-media .social-media-follow-me {
   background-color: #4c5eff;
   padding: 5px 4px;
 }
-section .topbar .social-media .social-media-follow-me p {
+.first .topbar .social-media .social-media-follow-me p {
   font-size: 12px;
   font-weight: 600;
 }
-section .topbar .topmenu-icon {
+.first .topbar .topmenu-icon {
   display: block;
 }
-section .topbar .topmenu-icon .menu-btn {
+.first .topbar .topmenu-icon .menu-btn {
   font-size: 50px;
   color: antiquewhite;
 }
-section .topbar .topmenu-icon .menu-btn:hover {
+.first .topbar .topmenu-icon .menu-btn:hover {
   color: royalblue;
   transform: scale(1.2);
 }
 @media only screen and (min-width: 850px) {
-  section .topbar .topmenu-icon {
+  .first .topbar .topmenu-icon {
     display: none;
   }
 }/*# sourceMappingURL=TopbarStyle.css.map */
