--- a/src/HomeFolder/Home.css
+++ b/src/HomeFolder/Home.css
@@ -23,12 +23,13 @@
 }
 
 main {
-  position: absolute;
+  padding: 10px;
   opacity: 1;
   z-index: 4;
   color: royalblue;
   width: 100%;
   font-weight: 600;
+  height: auto;
 }
 main .i-am {
   font-size: 10px;
@@ -163,14 +164,11 @@ main .name .button-29 {
   white-space: nowrap;
   will-change: box-shadow, transform;
   font-size: 10px;
-  margin-top: 50px;
 }
 @media only screen and (min-width: 750px) {
   main .name .button-29 {
     font-size: 18px;
-    position: absolute;
-    right: 30px;
-    bottom: -5rem;
+    margin-right: auto;
   }
 }
 @media only screen and (min-width: 1600px) {
@@ -190,5 +188,5 @@ main .name .button-29:active {
   transform: translateY(2px);
 }
 main .i-am {
-  margin-top: 50px;
+  margin-top: 0px;
 }/*# sourceMappingURL=Home.css.map */
