--- a/src/HomeFolder/Home.scss
+++ b/src/HomeFolder/Home.scss
@@ -68,13 +68,13 @@ $special-Color: #4c5eff;
 }
 
 main {
-  position: absolute;
-  //   background-color: #4c5eff;
+  padding: 10px;
   opacity: 1;
   z-index: 4;
   color: royalblue;
   width: 100%;
   font-weight: 600;
+  height: auto;
 
   .i-am {
     font-size: 10px;
@@ -85,7 +85,6 @@ main {
     }
   }
   .name {
-    // border: 2px solid green;
     padding-right: 20px;
     margin-top: 50px;
     gap: 10px;
@@ -103,7 +102,7 @@ main {
       margin: 0 auto;
       margin-bottom: auto;
       margin-left: 0;
-
+     
       @include responsive(bigphone) {
         margin-left: 0;
       }
@@ -152,7 +151,6 @@ main {
         }
       }
     }
-   
 
     /* CSS */
     .button-29 {
@@ -190,16 +188,12 @@ main {
       white-space: nowrap;
       will-change: box-shadow, transform;
       font-size: 10px;
-      margin-top: 50px;
+      //   margin-top: 50px;
       //   margin-left: auto;
 
       @include responsive(bigphone) {
         font-size: 18px;
-        // display: none;
-        position: absolute;
-        right: 30px;
-        bottom: -5rem;
-        // margin-right: 95%;
+        margin-right: auto;
       }
       @include responsive(desktop) {
         font-size: 25px;
@@ -221,8 +215,8 @@ main {
       }
     }
   }
-   .i-am {
+  .i-am {
     //   border: 2px solid red;
-      margin-top: 50px;
-    }
+    margin-top: 0px;
+  }
 }
