--- a/src/HomeFolder/Home.css
+++ b/src/HomeFolder/Home.css
@@ -9,11 +9,6 @@
   font-family: "Orbitron", sans-serif;
 }
 
-*::-webkit-scrollbar {
-  height: 0.5rem;
-  width: 1rem;
-}
-
 *::-webkit-scrollbar-track {
   background-color: whitesmoke;
 }
@@ -168,7 +163,7 @@ main .name .button-29 {
 @media only screen and (min-width: 750px) {
   main .name .button-29 {
     font-size: 18px;
-    margin-right: auto;
+    margin-left: auto;
   }
 }
 @media only screen and (min-width: 1600px) {
@@ -187,6 +182,6 @@ main .name .button-29:active {
   box-shadow: #3c4fe0 0 3px 7px inset;
   transform: translateY(2px);
 }
-main .i-am {
-  margin-top: 0px;
+main .i-am .last {
+  margin-top: 50px;
 }/*# sourceMappingURL=Home.css.map */
