--- a/src/HomeFolder/Home.scss
+++ b/src/HomeFolder/Home.scss
@@ -12,11 +12,6 @@
   // font-family: poppins;
 }
 
-*::-webkit-scrollbar {
-  height: 0.5rem;
-  width: 1rem;
-}
-
 *::-webkit-scrollbar-track {
   background-color: whitesmoke;
 }
@@ -102,7 +97,7 @@ main {
       margin: 0 auto;
       margin-bottom: auto;
       margin-left: 0;
-     
+
       @include responsive(bigphone) {
         margin-left: 0;
       }
@@ -193,7 +188,7 @@ main {
 
       @include responsive(bigphone) {
         font-size: 18px;
-        margin-right: auto;
+        margin-left: auto;
       }
       @include responsive(desktop) {
         font-size: 25px;
@@ -217,6 +212,9 @@ main {
   }
   .i-am {
     //   border: 2px solid red;
-    margin-top: 0px;
+    // margin-top: 0px;
+    .last {
+      margin-top: 50px;
+    }
   }
 }
