--- a/src/AboutFolder/AboutStyle.scss
+++ b/src/AboutFolder/AboutStyle.scss
@@ -61,10 +61,17 @@ $special-Color: #4c5eff;
   }
 }
 
-main {
+.aboutMe {
+  border: 2px solid royalblue;
+  background-color: rgba(97, 155, 255, 0.062);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  margin-top: 50px;
+  border-radius: 10px;
+  padding: 20px 0;
+
   .aboutMe-container {
     font-size: 10px;
-    margin-top: 50px;
+    // margin-top: 50px;
 
     @include responsive(bigphone) {
       font-size: 20px;
@@ -75,10 +82,16 @@ main {
     padding: 15px;
     margin-top: 30px;
     // background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+    // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
 
     h3 {
       font-size: 15px;
+    }
+    p {
+      color: rgb(109, 135, 192);
+      font-size: 10px;
+      letter-spacing: 1px;
+      line-height: 17px;
     }
   }
 
@@ -87,15 +100,19 @@ main {
     position: relative;
     overflow-y: scroll;
     max-height: 300px;
-    padding: 0 15px;
-    background-color: rgba(0, 94, 255, 0.15);
-    box-shadow: 5px 5px 30px rgba(65, 105, 225, 0.274);
+    padding: 5px 15px;
+    // background-color: rgba(0, 94, 255, 0.15);
+    // box-shadow: 5px 5px 30px rgba(65, 105, 225, 0.274);
 
     p {
       color: rgb(109, 135, 192);
       font-size: 10px;
       letter-spacing: 1px;
       line-height: 17px;
+
+      &::first-letter {
+        font-size: 20px;
+      }
     }
   }
 }
