--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -194,11 +194,7 @@
 }
 .first .topbar .topmenu-icon .menu-btn {
   font-size: 50px;
-  color: antiquewhite;
-}
-.first .topbar .topmenu-icon .menu-btn:hover {
-  color: royalblue;
-  transform: scale(1.2);
+  color: rgb(150, 171, 217);
 }
 @media only screen and (min-width: 850px) {
   .first .topbar .topmenu-icon {
