--- a/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.scss
+++ b/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.scss
@@ -67,7 +67,8 @@ $special-Color: #4c5eff;
   // background-color: rgba(97, 155, 255, 0.062);
   // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
   background-color: rgba(13, 21, 34, 0.694);
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   margin-top: 100px;
   border-radius: 10px;
   padding: 20px 5px;
@@ -168,7 +169,7 @@ $special-Color: #4c5eff;
     .statCard {
       @include flexDisplay(center, top, column);
       border: 1px solid royalblue;
-      box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.363);
+      box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
       border-radius: 5px;
       width: 30%;
       margin-bottom: auto;
