--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -36,6 +36,7 @@
   position: fixed;
   width: 100vw;
   background-color: rgb(0, 0, 0);
+  background-color: rgba(13, 21, 34, 0.694);
 }
 @media only screen and (min-width: 850px) {
   .first .topbar {
@@ -53,8 +54,8 @@
   left: 0;
   right: 0;
   top: 5rem;
-  background-color: rgba(160, 183, 252, 0.888);
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+  background-color: rgba(13, 21, 34, 0.694);
 }
 @media only screen and (min-width: 850px) {
   .first .topbar nav {
@@ -63,6 +64,7 @@
     width: 60%;
     max-width: 500px;
     background-color: rgba(255, 255, 255, 0);
+    box-shadow: none;
   }
 }
 .first .topbar nav ul {
@@ -159,8 +161,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.1);
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  background-color: rgba(13, 21, 34, 0.694);
+  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   border-radius: 5px;
   margin-bottom: auto;
   width: 80%;
