--- a/src/TopbarFolder/TopbarStyle.scss
+++ b/src/TopbarFolder/TopbarStyle.scss
@@ -80,6 +80,8 @@ $special-Color: #4c5eff;
     position: fixed;
     width: 100vw;
     background-color: rgb(0, 0, 0);
+    // box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+    background-color: rgba(13, 21, 34, 0.694);
     // border: 2px solid green;
 
     @include responsive(tablet) {
@@ -98,8 +100,10 @@ $special-Color: #4c5eff;
       left: 0;
       right: 0;
       top: 5rem;
-      background-color: rgba(160, 183, 252, 0.888);
-      box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+      // background-color: rgba(160, 183, 252, 0.888);
+      // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+      box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+      background-color: rgba(13, 21, 34, 0.694);
 
       // nav for desktop and tablet view
       @include responsive(tablet) {
@@ -108,6 +112,7 @@ $special-Color: #4c5eff;
         width: 60%;
         max-width: 500px;
         background-color: rgba(255, 255, 255, 0);
+        box-shadow: none;
       }
 
       ul {
@@ -204,8 +209,10 @@ $special-Color: #4c5eff;
       li {
         @include flexDisplay(center, center, column);
         // border: 1px solid rgba(245, 245, 245, 0.215);
-        background-color: rgba(255, 255, 255, 0.1);
-        box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+        // background-color: rgba(255, 255, 255, 0.1);
+        background-color: rgba(13, 21, 34, 0.694);
+        // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+        box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
         border-radius: 5px;
         margin-bottom: auto;
         width: 80%;
