--- a/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.scss
+++ b/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.scss
@@ -105,6 +105,7 @@ $special-Color: #4c5eff;
     p {
       color: rgb(109, 135, 192);
       font-size: 10px;
+      width: 100px;
       letter-spacing: 1px;
       line-height: 17px;
     }
@@ -130,7 +131,7 @@ $special-Color: #4c5eff;
       width: 80%;
     }
 
-    p {
+    span {
       color: rgb(109, 135, 192);
       font-size: 10px;
       letter-spacing: 1px;
@@ -185,7 +186,7 @@ $special-Color: #4c5eff;
       }
       p {
         font-size: 8px;
-
+        color: rgb(150, 171, 217);
         @include responsive(bigphone) {
           font-size: 20px;
         }
@@ -197,6 +198,7 @@ $special-Color: #4c5eff;
     text-align: center;
     font-size: 8px;
     margin-top: 10px;
+    color: rgb(150, 171, 217);
 
     @include responsive(bigphone) {
       font-size: 20px;
