--- a/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
+++ b/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
@@ -163,4 +163,74 @@
   .aboutMe .punchLine {
     font-size: 20px;
   }
+}
+.aboutMe .pun {
+  border-top: 1px solid royalblue;
+  border-bottom: 1px solid royalblue;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 30px;
+  overflow: hidden;
+}
+.aboutMe .pun .slideCon {
+  -webkit-animation: aa 20s linear infinite;
+          animation: aa 20s linear infinite;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 8px;
+  align-self: center;
+  font-size: 20px;
+  width: 250%;
+}
+.aboutMe .pun .slideCon p {
+  font-size: 10px;
+}
+@-webkit-keyframes aa {
+  0% {
+    transform: translateX(100%);
+  }
+  50% {
+    opacity: 0.5;
+    transform: translateX(-100%);
+  }
+  55% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  60% {
+    opacity: 0;
+    transform: translateX(50%);
+  }
+  70% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+@keyframes aa {
+  0% {
+    transform: translateX(100%);
+  }
+  50% {
+    opacity: 0.5;
+    transform: translateX(-100%);
+  }
+  55% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  60% {
+    opacity: 0;
+    transform: translateX(50%);
+  }
+  70% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }/*# sourceMappingURL=AboutStyle.css.map */
