--- a/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
+++ b/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
@@ -63,6 +63,7 @@
   width: 100px;
   letter-spacing: 1px;
   line-height: 17px;
+  word-spacing: 5px;
 }
 .aboutMe .mappedHeading .readMore {
   font-size: 8px;
@@ -90,6 +91,7 @@
   font-size: 10px;
   letter-spacing: 1px;
   line-height: 17px;
+  word-spacing: 3px;
 }
 @media only screen and (min-width: 750px) {
   .aboutMe .mappedDetails span {
@@ -97,6 +99,7 @@
     font-size: 15px;
     letter-spacing: 2px;
     line-height: 20px;
+    word-spacing: 5px;
   }
 }
 .aboutMe .mappedDetails span .readMore {
@@ -135,6 +138,12 @@
   text-align: center;
   padding: 5px 0;
 }
+@media only screen and (min-width: 750px) {
+  .aboutMe .myStaticsCon .statCard {
+    height: 150px;
+    border-radius: 10px;
+  }
+}
 .aboutMe .myStaticsCon .statCard h1 {
   font-size: 100%;
 }
@@ -161,7 +170,8 @@
 }
 @media only screen and (min-width: 750px) {
   .aboutMe .punchLine {
-    font-size: 20px;
+    font-size: 15px;
+    word-spacing: 10px;
   }
 }
 .aboutMe .pun {
@@ -184,4 +194,7 @@
 }
 .aboutMe .pun .slideCon p {
   font-size: 13px;
+  color: rgb(150, 171, 217);
+  word-spacing: 5px;
+  letter-spacing: 3px;
 }/*# sourceMappingURL=AboutStyle.css.map */
