--- a/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
+++ b/src/BannerFolder/HomeFolder/AboutFolder/AboutStyle.css
@@ -65,15 +65,6 @@
   line-height: 17px;
   word-spacing: 5px;
 }
-.aboutMe .mappedHeading .readMore {
-  font-size: 8px;
-  cursor: pointer;
-}
-@media only screen and (min-width: 750px) {
-  .aboutMe .mappedHeading .readMore {
-    font-size: 12px;
-  }
-}
 .aboutMe .mappedDetails {
   margin: 0 auto;
   position: relative;
@@ -103,17 +94,20 @@
   }
 }
 .aboutMe .mappedDetails span .readMore {
-  border: 2px solid rgba(206, 220, 254, 0.384);
+  color: rgb(206, 234, 254);
+  border: none;
   width: 80px;
+  height: 20px;
+  background-color: rgba(146, 17, 17, 0);
   padding: 0 5px;
   font-size: 8px;
   cursor: pointer;
 }
 @media only screen and (min-width: 750px) {
   .aboutMe .mappedDetails span .readMore {
-    font-size: 12px;
-    width: 105px;
-    padding: 0 5px;
+    font-size: 15px;
+    width: 110px;
+    padding: 5px;
   }
 }
 .aboutMe .myStaticsCon {
@@ -140,16 +134,17 @@
 }
 @media only screen and (min-width: 750px) {
   .aboutMe .myStaticsCon .statCard {
-    height: 150px;
+    height: 170px;
     border-radius: 10px;
+    padding: 0 0 15px 0;
   }
 }
 .aboutMe .myStaticsCon .statCard h1 {
-  font-size: 100%;
+  font-size: 50px;
 }
 @media only screen and (min-width: 750px) {
   .aboutMe .myStaticsCon .statCard h1 {
-    font-size: 60px;
+    font-size: 100px;
   }
 }
 .aboutMe .myStaticsCon .statCard p {
