--- a/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.scss
+++ b/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.scss
@@ -87,61 +87,97 @@ $special-Color: #4c5eff;
       width: 80%;
     }
   }
-
-  .myServicesCon {
-    @include flexDisplay(space-around, top, row);
-    flex-wrap: wrap;
-    gap: 20px;
+  .grid-stack-con {
     background-color: rgba(13, 21, 34, 0);
-    .serviceCard {
-      @include flexDisplay(center, top, column);
-      border: 1px solid royalblue;
-      background-color: rgba(13, 21, 34, 0.694);
-      // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
-      box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
-      border-radius: 5px;
-      width: 40%;
-      margin-bottom: auto;
-      text-align: center;
-      padding: 5px 0;
-      transition: all 0.3s linear;
+    @include flexDisplay(space-between, center, row);
+    flex-wrap: wrap;
+    .myServicesCon {
+      @include flexDisplay(space-around, top, row);
+      flex-wrap: wrap;
+      gap: 30px;
+      background-color: rgba(13, 21, 34, 0);
+      width: 60%;
+      min-width: 700px;
+      margin: 0 auto;
 
-      &:hover {
-        transform: scale(1.2);
-        border: 2px solid royalblue;
-      }
+      .serviceCard {
+        @include flexDisplay(center, top, column);
+        border: 1px solid royalblue;
+        background-color: rgba(13, 21, 34, 0.694);
+        box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+        border-radius: 5px;
+        width: 40%;
+        margin-bottom: auto;
+        text-align: center;
+        padding: 5px 0;
+        transition: all 0.3s linear;
 
-      @include responsive(bigphone) {
-        width: 35%;
-        max-width: 400px;
-        height: 170px;
-        border-radius: 10px;
-        padding: 0 0 15px 0;
-      }
-
-      h1 {
-        font-size: 50px;
-
-        @include responsive(bigphone) {
-          font-size: 100px;
+        &:hover {
+          transform: scale(1.2);
+          border: 2px solid royalblue;
         }
-      }
-      p {
-        font-size: 8px;
-        color: rgb(150, 171, 217);
+
         @include responsive(bigphone) {
-          font-size: 20px;
+          width: 30%;
+          max-width: 300px;
+          height: 200px;
+          border-radius: 10px;
+          padding: 5px 10px;
+          border: 2px solid red;
+        }
+
+        h1 {
+          font-size: 50px;
+
+          @include responsive(bigphone) {
+            font-size: 100px;
+          }
+        }
+        p {
+          font-size: 8px;
+          color: rgb(150, 171, 217);
+          @include responsive(bigphone) {
+            font-size: 20px;
+          }
         }
       }
     }
-  }
-  .img2 {
-    margin-top: 20px;
-    width: 100%;
-    opacity: 0.8;
-    // background-color: rgba(13, 21, 34, 0.694);
-  // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
-  // box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+    .stack {
+      border: 2px solid royalblue;
+      margin: 0 auto;
+      margin-top: 50px;
+      width: 200px;
+      height: 200px;
+      position: relative;
+      border-radius: 50%;
+      // opacity: 0.8;
+      // background-color: rgba(13, 21, 34, 0.694);
+      box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+      box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+      animation: yy 15s linear infinite;
+
+      .icon {
+        position: absolute;
+        bottom: 0;
+
+        &::before {
+          content: "HTML";
+          font-size: 30px;
+        }
+      }
+    }
+
+    @keyframes yy {
+      0% {
+        transform: rotate(360deg);
+      }
+      // 50% {
+      //   transform: rotate(360deg);
+      // }
+      100% {
+        transform: rotate(0deg);
+      }
+    }
   }
 
   .pun {
